# galileom2m

./: .gitignore  README
core/: internals.h  liblwm2m.c  objects.c  packet.c  registration.c  transaction.c  uri.c
tests/client/: CMakeLists.txt  applications.c  applications.h  lwm2mclient.c  object.c  object.h  object_device.c  object_device.h  read_objects.c  read_objects.h  status.c  status.h
